Update README. Fix footer overflow on the home page.

--- a/src/scss/layout/home/_footer.scss
+++ b/src/scss/layout/home/_footer.scss
@@ -22,11 +22,17 @@
 
 .l-footer {
     &--home {
-        background: none;
-        left: 0;
-        padding: 1rem;
-        position: absolute;
-        right: 0;
+        @media only screen and (max-height: 1024px) {
+            margin: 0;
+        }
+
+        @media only screen and (min-height: 1024px) {
+            background: none;
+            left: 0;
+            padding: 1rem;
+            position: absolute;
+            right: 0;
+        }
 
         .l-footer__scrollup {
             display: none;
